# TFLite

./: .gitignore  Makefile  README.md  TF_lite_classification.py  TF_lite_yolo.py  TF_lite_yolo_measure.py  build.sh  build_docker.sh  configure.sh  help_scripts.py  measure_gpu.sh  run.sh  run_classification.sh  run_memory.sh  run_memory_gpu.sh  run_memory_gpu_multiple copy.sh  run_memory_gpu_multiple.sh  run_memory_inference_multiple.sh  run_memory_multiple.sh  run_memory_thop_multiple.sh  run_multiple.sh  run_timeit.sh  run_timeit_inference_multiple.sh  run_timeit_multiple.sh  run_timeit_multiple_2.sh  run_yolo.sh  test.sh
class_models/: 1152-fp16.tflite  1152-fp32.tflite  32-fp16.tflite  32-fp32.tflite  384-fp16.tflite  384-fp32.tflite  768-fp16.tflite  768-fp32.tflite
data/: example.txt
docker_mem/: Dockerfile  build.sh  start.sh
docker_mem_own_script/: Dockerfile  TFLiteMemory  build.sh
docker_memory/: Dockerfile  build.sh
models/class_models/: 1536-fp16.tflite  1536-fp32.tflite  192-fp16.tflite  192-fp32.tflite
models/classification/: ShuffleNet.tflite  model_tf.tflite
models/object_detection/exp16/: events.out.tfevents.1646756804.def70ed01b01.6988.0  events.out.tfevents.1647071771.ef29dae75e01.1246.0  events.out.tfevents.1647078686.ef29dae75e01.6549.0  opt.yaml  results.csv
models/object_detection/exp16/weights/: best-fp16.tflite
models/yolo_models/: 1152-int8.tflite  1536-fp16.tflite  192-fp16.tflite  32-int8.tflite  384-fp16.tflite  384-int8.tflite
python/: analyze_memory.ipynb  analyze_time.ipynb  detector.py  detector_lite.py  detector_slim.py  fix_data.py  memory.csv  utils.py
src/: CMakeLists.txt  Detector.cpp  Detector.h  showoff.cpp  tflite.cpp  tflite_classification.cpp  tflite_gpu.cpp  tflite_mem.cpp  tflite_mem_gpu.cpp  tflite_mem_image.cpp  tflite_mem_inference.cpp  tflite_timeit.cpp  tflite_timeit_gpu.cpp  tflite_timeit_inference.cpp  tflite_yolo.cpp  tflite_yolo_memory_CPU.cpp  tflite_yolo_memory_GPU.cpp  tflite_yolo_time_rest.cpp
src/old/: Makefile  tflite_mem_simple.cpp  tflite_timeit_gpu.cpp  tflite_timeit_simple.cpp
src/send/: TF_lite_yolo.py  tflite_yolo.cpp
yolo_models/: 1152-fp16.tflite  1536-int8.tflite  192-int8.tflite  32-fp16.tflite  768-fp16.tflite  768-int8.tflite  epoch80-fp16.tflite
